--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-transition-group": "^4.4.5",
     "axios": "^0.27.2",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.7.4",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14"
   }
